--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
-    "editor.tabSize": 2,
+    "editor.tabSize": 4,
+    "[javascript]": {
+        "editor.tabSize": 2
+    },
+    "[typescript]": {
+        "editor.tabSize": 2
+    },
+    "[typescriptreact]": {
+        "editor.tabSize": 2
+    },
+    "[csharp]": {
+        "editor.tabSize": 4,
+        "editor.maxTokenizationLineLength": 165,
+        "editor.inlineSuggest.suppressSuggestions": false
+    },
     "editor.detectIndentation": false
 }
