--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,14 +1,22 @@
-FROM node:22-alpine
+FROM node:22-alpine AS build
 
 WORKDIR /app
-
-COPY package*.json .
-COPY tsconfig.json .
-
+COPY . /app
 RUN npm install
+RUN npm run build
+COPY nginx.conf .
 
-COPY . .
+FROM nginx:alpine
 
-EXPOSE 3000
+COPY --from=build /app/nginx.conf /etc/nginx/conf.d/default.conf
 
-CMD [ "npm", "run", "start" ]
+WORKDIR /usr/share/nginx/html
+
+# Remove default nginx static assets
+RUN rm -rf ./*
+
+# Copy static assets from builder stage
+COPY --from=build /app/build .
+
+# Containers run nginx with global directives and daemon off
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
